syntax = "proto3";
import "common.proto";

package massa.api.v1;

option cc_enable_arenas = true;
option csharp_namespace = "Massa.Api.V1";
option go_package = "google.golang.org/genproto/massa/api/v1/operation;operation";
option java_multiple_files = true;
option java_package = "com.massa.api.v1";
option objc_class_prefix = "OPERATION";
option php_namespace = "Massa\\Api\\V1";

// region Operation
// message struct
message OperationInfo {
    // string field
    string id = 1;
    // string field
    repeated string in_blocks = 2;
    // bool field
    bool in_pool = 3;
    // bool field
    bool is_final = 4;
    // object field
    SecureShareOperation operation = 5;
}

// message struct
message Roll {
    // int64 field
    uint64 roll_count = 1;
}

// message struct
message OperationId {
    // string field
    string value = 1;
}

// message struct
message OperationType {
    // object field
    Transaction transaction = 1;
    // object field
    ExecuteSC execut_sc = 2;
    // object field
    CallSC call_sc = 3;
    // object field
    RollBuy roll_buy = 4;
    // object field
    RollSell roll_sell = 5;
}

enum OperationStreamFilterType {
    TRANSACTION = 0;
    EXECUTE_SC = 1;
    CALL_SC = 2;
    ROLL_BUY = 3;
    ROLL_SELL = 4;
}

// message struct
message Transaction {
    // string field
    string amount = 1;
    // string field
    string recipient_address = 2;
}

// message struct
message CallSC {
    // string field
    string target_addr = 1;
    // string field
    string target_func = 2;
    // byte vec
    bytes param = 3;
    // float field
    uint64 max_gas = 4;
    // uint64 field
    uint64 coins = 5;
}

// message struct
message ExecuteSC {
    // data field
    bytes data = 1;
    // uint64 field
    uint64 max_gas = 2;
    // datastore
    repeated BytesMapFieldEntry datastore = 3;
}

// message struct
message RollBuy {
    // float field
    uint64 roll_count = 1;
}

// message struct
message RollSell {
    // float field
    uint64 roll_count = 1;
}

// message struct
message OperationInput {
    // string field
    string content_creator_pub_key = 1;
    // string field
    string signature = 2;
    // string field
    repeated string serialized_content = 3;
}

// message struct
message SecureShareOperation {
    // object field
    OperationType content = 1;
    // string field
    string signature = 2;
    // string field
    string content_creator_pub_key = 3;
    // string field
    string content_creator_address = 4;
    // string field
    string id = 5;
}

